CI watching all files in directory

--- a/.github/workflows/generate_docs.yaml
+++ b/.github/workflows/generate_docs.yaml
@@ -38,7 +38,7 @@ jobs:
         "
 
     - name: List output files
-      run: ls -la kicad_docs
+      run: ls -lR
 
     - name: Upload PDF Artifacts
       uses: actions/upload-artifact@v2
