--- a/.github/workflows/generate_docs.yaml
+++ b/.github/workflows/generate_docs.yaml
@@ -18,7 +18,7 @@ jobs:
 
     - name: Test Docker file creation
       run: |
-        docker run --rm -v $(pwd):/workdir kicad/kicad:8.0.3 /bin/bash -c "
+        docker run --rm -v $(pwd):/workdir -u $(id-u):$(id -g) kicad/kicad:8.0.3 /bin/bash -c "
         echo 'This is a test file.' > /workdir/kicad_docs/testfile.txt
         "
     
