--- a/.github/workflows/generate_docs.yaml
+++ b/.github/workflows/generate_docs.yaml
@@ -13,35 +13,43 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Get commit hash and repo name
+      id: vars
+      run: |
+        echo "COMMIT_HASH=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+        echo "REPO_NAME=$(basename `git rev-parse --show-toplevel`)" >> $GITHUB_ENV
+
     - name: Create output directory
-      run: mkdir -p kicad_docs
-    
+      run: |
+        OUTPUT_DIR="${{ env.REPO_NAME }}_kicad_docs_${{ env.COMMIT_HASH }}"
+        mkdir -p $OUTPUT_DIR
+
     - name: Export schematic PDF
       run: |
-        docker run --rm -v $(pwd):/workdir -u $(id-u):$(id -g) kicad/kicad:8.0.3 /bin/bash -c "
-          mkdir -p /workdir/kicad_docs &&
-          kicad-cli sch export pdf -o /workdir/kicad_docs/schematic.pdf /workdir/hardware-electronics/M2SmartHome.kicad_sch || true
+        docker run --rm -v $(pwd):/workdir -u $(id -u):$(id -g) kicad/kicad:8.0.3 /bin/bash -c "
+          mkdir -p /workdir/${{ env.REPO_NAME }}_kicad_docs_${{ env.COMMIT_HASH }} &&
+          kicad-cli sch export pdf -o /workdir/${{ env.REPO_NAME }}_kicad_docs_${{ env.COMMIT_HASH }}/${{ env.REPO_NAME }}_sch_${{ env.COMMIT_HASH }}.pdf /workdir/hardware-electronics/M2SmartHome.kicad_sch || true
         "
 
     - name: Export PCB PDF
       run: |
-        docker run --rm -v $(pwd):/workdir -u $(id-u):$(id -g) kicad/kicad:8.0.3 /bin/bash -c "
-          mkdir -p /workdir/kicad_docs &&
-          kicad-cli pcb export pdf --layers F.Cu,B.Cu,Edge.Cuts -o /workdir/kicad_docs/pcb.pdf /workdir/hardware-electronics/M2SmartHome.kicad_pcb || true
+        docker run --rm -v $(pwd):/workdir -u $(id -u):$(id -g) kicad/kicad:8.0.3 /bin/bash -c "
+          mkdir -p /workdir/${{ env.REPO_NAME }}_kicad_docs_${{ env.COMMIT_HASH }} &&
+          kicad-cli pcb export pdf --layers F.Cu,B.Cu,Edge.Cuts -o /workdir/${{ env.REPO_NAME }}_kicad_docs_${{ env.COMMIT_HASH }}/${{ env.REPO_NAME }}_pcb_${{ env.COMMIT_HASH }}.pdf /workdir/hardware-electronics/M2SmartHome.kicad_pcb || true
         "
 
     - name: Export STEP file
       run: |
-        docker run --rm -v $(pwd):/workdir -u $(id-u):$(id -g) kicad/kicad:8.0.3 /bin/bash -c "
-          mkdir -p /workdir/kicad_docs &&
-          kicad-cli pcb export step -o /workdir/kicad_docs/board.step /workdir/hardware-electronics/M2SmartHome.kicad_pcb || true
+        docker run --rm -v $(pwd):/workdir -u $(id -u):$(id -g) kicad/kicad:8.0.3 /bin/bash -c "
+          mkdir -p /workdir/${{ env.REPO_NAME }}_kicad_docs_${{ env.COMMIT_HASH }} &&
+          kicad-cli pcb export step -o /workdir/${{ env.REPO_NAME }}_kicad_docs_${{ env.COMMIT_HASH }}/${{ env.REPO_NAME }}_step_${{ env.COMMIT_HASH }}.step /workdir/hardware-electronics/M2SmartHome.kicad_pcb || true
         "
-
+        
     - name: List output files
-      run: ls -lR
+      run: ls -la ${{ env.REPO_NAME }}_kicad_docs_${{ env.COMMIT_HASH }}
 
     - name: Upload PDF Artifacts
       uses: actions/upload-artifact@v2
       with:
         name: kicad-docs
-        path: kicad_docs/*
+        path: ${{ env.REPO_NAME }}_kicad_docs_${{ env.COMMIT_HASH }}/*
